--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
+ <h1>Welcome to Wordle Game</h1>
+    <script src="class.js"></script>
 
 		<!-- Wrapper -->
 			<div id="wrapper">
