--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 	</head>
 	<body class="is-preload">
  <h1>Welcome to Wordle Game</h1>
-    <script src="class.js"></script>
+    <script src="classes.js"></script>
+    <script src="class.js.map"></script>
+    <script src="class.js.teavmdbg"></script>
 
 		<!-- Wrapper -->
 			<div id="wrapper">
