--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Hi.<br />
+						<h1>Hi,<br />
 						I'm Ezra</h1>
-						<p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
+						<p>A Computer Science, Music Composition, and Philosophy student with a passion for learning cool new things, and creating cool new things.</a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
