--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Hi,<br />
 						I'm Ezra</h1>
-						<p>A Computer Science, Music Composition, and Philosophy student with a passion for learning cool new things, and creating cool new things.</a>.</p>
+						<p>A Computer Science, Music Composition, and Philosophy student <br> with a passion for learning cool new things, and creating cool new things.</a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
