--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                                     Public Speaking, Collaboration, Content Creation, Teaching, Writing
                                 </li>
                                 <li>
-                                    Chess, Guitar, Piano, Alto Saxhophone, Soccer, Music Production
+                                    Chess, Music Production, Guitar, Piano, Alto Saxophone, Soccer
                                 </li>
                                 <li>
                                     
@@ -312,13 +312,13 @@
                 </div> <!-- entry -->
 
                 <div class="column entry">
-                    <a href="images/folio/gallery/g-woodcraft.jpg" class="entry__link glightbox" data-glightbox="title: WoodCraft; description: .entry__desc-02">
+                    <a href="images/folio/gallery/wordle2.png" class="entry__link glightbox" data-glightbox="title: WoodCraft; description: .entry__desc-02">
                         <div class="entry__thumb">
-                            <img src="images/folio/woodcraft.jpg" srcset="images/folio/woodcraft.jpg 1x, images/folio/woodcraft@2x.jpg 2x" alt="">
+                            <img src="images/folio/wordle.png" srcset="images/folio/wordle.png 1x, images/folio/wordle.png 2x" alt="">
                         </div>
                         <div class="entry__info">
-                            <h4 class="entry__title">WoodCraft</h4>
-                            <div class="entry__cat">Product Design</div>
+                            <h4 class="entry__title">Text-Based Wordle</h4>
+                            <div class="entry__cat"></div>
                         </div>
                     </a>
 
