--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                 <div class="column entry">
                     <a href="images/folio/gallery/wordle2.png" class="entry__link glightbox" data-glightbox="title: Text-Based Wordle; description: .entry__desc-02">
                         <div class="entry__thumb">
-                            <img src="images/folio/wordle.png" srcset="images/folio/wordle.png 1x, images/folio/wordle.png 2x" alt="">
+                            <img src="images/folio/wordle.jpg" srcset="images/folio/wordle.jpg 1x, images/folio/wordle.jpg 2x" alt="">
                         </div>
                         <div class="entry__info">
                             <h4 class="entry__title">Text-Based Wordle</h4>
@@ -354,11 +354,11 @@
                 <div class="column entry">
                     <a href="images/folio/gallery/shell2.png" class="entry__link glightbox" data-glightbox="title: A Simple Shell; description: .entry__desc-04">
                         <div class="entry__thumb">
-                            <img src="images/folio/grayscale.jpg" srcset="images/folio/grayscale.jpg 1x, images/folio/grayscale@2x.jpg 2x" alt="">
+                            <img src="images/folio/shell.jpg" srcset="images/folio/shell.jpg 1x, images/folio/shell.jpg 2x" alt="">
                         </div>
                         <div class="entry__info">
-                            <h4 class="entry__title">Grayscale</h4>
-                            <div class="entry__cat">Product Design</div>
+                            <h4 class="entry__title">A Simple Shell</h4>
+                            <div class="entry__cat">Click for more info</div>
                         </div>
                     </a>
 
