--- a/index.html
+++ b/index.html
@@ -364,55 +364,34 @@
 
                     <div class="glightbox-desc entry__desc-04">
                         <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                        Inventore ipsum iste soluta fugiat, impedit illum ducimus 
-                        deleniti facilis ab, tempora non! Nisi, tempora provident.
+                        Implemented a simple shell that can process commands and handle various operators. <br>
+                        The project focused on forking child processes and altering file descriptor tables. I cannot post the code to GitHub
+                        as it was a class project and would be considered an academic integrity violation.
                         
                         </p>
                     </div>
                 </div> <!-- entry -->
 
                 <div class="column entry">
-                    <a href="images/folio/gallery/g-lamp.jpg" class="entry__link glightbox" data-glightbox="title: The Lamp; description: .entry__desc-05">
+                    <a href="videos/hp.mp4" class="entry__link glightbox" data-glightbox="title: Capture the Sorcerer's Stone; description: .entry__desc-05">
                         <div class="entry__thumb">
-                            <img src="images/folio/lamp.jpg" srcset="images/folio/lamp.jpg 1x, images/folio/lamp@2x.jpg 2x" alt="">
+                            <img src="images/folio/glasses.jpg" srcset="images/folio/glasses.jpg 1x, images/folio/glasses.jpg 2x" alt="">
                         </div>
                         <div class="entry__info">
-                            <h4 class="entry__title">The Lamp</h4>
-                            <div class="entry__cat">Brand Identity</div>
+                            <h4 class="entry__title">Capture the Sorcerer's Stone</h4>
+                            <div class="entry__cat">Click for more info</div>
                         </div>
                     </a>
 
                     <div class="glightbox-desc entry__desc-05">
                         <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                        Inventore ipsum iste soluta fugiat, impedit illum ducimus 
-                        deleniti facilis ab, tempora non! Nisi, tempora provident.
-                        <a href="https://www.behance.net/">Project Link</a>.
+                        Created this game in high school using Javascript on Code.org. <br> 
+                        Implemented everything from scratch. The source code has been lost.
                         </p>
                     </div>
                 </div> <!-- entry -->
 
-                <div class="column entry">
-                    <a href="images/folio/gallery/g-tropical.jpg" class="entry__link glightbox" data-glightbox="title: Tropical; description: .entry__desc-06">
-                        <div class="entry__thumb">
-                            <img src="images/folio/tropical.jpg" srcset="images/folio/tropical.jpg 1x, images/folio/tropical@2x.jpg 2x" alt="">
-                        </div>
-                        <div class="entry__info">
-                            <h4 class="entry__title">Tropical</h4>
-                            <div class="entry__cat">Frontend Design</div>
-                        </div>
-                    </a>
-
-                    <div class="glightbox-desc entry__desc-06">
-                        <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                        Inventore ipsum iste soluta fugiat, impedit illum ducimus 
-                        deleniti facilis ab, tempora non! Nisi, tempora provident.
-                        <a href="https://www.behance.net/">Project Link</a>.
-                        </p>
-                    </div>
-                </div> <!-- entry --> 
+               
 
             </div> <!-- folio entries -->
 
@@ -430,51 +409,45 @@
 
                 <div class="column counter-items__item">
                     <div class="num">
-                        80
+                        10
                         <span>+</span>
                     </div>
-                    <h5>Happy Customers</h5>
+                    <h5>Seconds Brushing my Teeth Every Day</h5>
                     <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Vel harum magni quae voluptate error quo repellendus inventore 
-                    laborum ex veniam. 
+                    brushbrushbrushbrushbrushdone!
                     </p>
                 </div> <!-- end counter-items__item -->
 
                 <div class="column counter-items__item">
                     <div class="num">
-                        120
+                        8+
                         <span>+</span>
                     </div>
-                    <h5>Projects Completed</h5>
+                    <h5>Times Saying "You too" to Waiters</h5>
                     <p>
-                    Nunc interdum lacus sit amet orci. Vestibulum dapibus nunc ac augue. 
-                    Fusce vel dui. In ac felis 
-                    quis tortor malesuada pretium
+                    I'm very reciprocal.
                     </p>
                 </div> <!-- end counter-items__item -->
 
                 <div class="column counter-items__item">
                     <div class="num">
-                        23k
+                        1.5
                         <span>+</span>
                     </div>
-                    <h5>Lines of Code</h5>
+                    <h5>Plants Kept Alive</h5>
                     <p>
-                    Excepturi nam cupiditate culpa doloremque deleniti repellat. Veniam quos repellat voluptas animi adipisci.
-                    Nisi eaque consequatur. Voluptatem dignissimos ut ducimus
+                    They're doing so well though.
                     </p>
                 </div> <!-- end counter-items__item -->
 
                 <div class="column counter-items__item">
                     <div class="num">
-                        85
+                        13.8
                         <span>+</span>
                     </div>
-                    <h5>Positive Feedback</h5>
+                    <h5>Billion Years Before I Was Born</h5>
                     <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel harum magni quae voluptate error 
-                    quo repellendus inventore laborum ex veniam.
+                    Now that's a long time!
                     </p>
                 </div> <!-- end counter-items__item -->
 
@@ -499,8 +472,7 @@
 
                 <div class="column xl-6 md-12 s-footer__block s-footer__about">                    
                     <p class="attention-getter">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas illum quasi facere libero, 
-                    fugiat laboriosam possimus amet consectetur adipisicing elit reprehenderit eveniet tempore quisquam ipsa id esse. Facere ratione dignissimos.
+                    I am currently looking for a computer science internship in LA for Summer '25. If you're interested in connecting, please get in touch below!
                     </p>               
                 </div> <!-- end section-footer__about -->
 
