--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
                     </p>
 
                     <p class="attention-getter">
-                    One thing I have learned from my experiences, whether it be touring the country as a guitarist or programming web-apps with NASA, is that there is no feeling quite like
-                    building something from the ground up, making mistakes and learning from them, and seeing your hard work pay off. 
+                        Through my experiences, whether touring the country as a guitarist or developing web apps with NASA, I've learned that nothing compares to building something from the ground up, 
+                        learning from mistakes along the way, and watching hard work pay off. 
                     </p>
 
                     <div class="grid-list-items s-about__blocks">
